# crawlboy

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASING.md  SECURITY.md  interactive_cli.py  pyproject.toml  requirements.txt  sitemap_crawler.py
.github/workflows/: ci.yml  publish.yml  security.yml
crawlboy/: __init__.py  cli.py  crawler.py  meta_extract.py
docs/security/: controls.md  threat-model.md
tests/: test_meta_frontmatter.py
tests/security/: test_security_controls.py
